update zadaca 1 lab 8